{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 279,
  "lineage": "639bd95c-a6d0-8423-cca3-979e88e2feb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-west-1:325350732332:transit-gateway/tgw-010f3df7db7661f29",
            "association_default_route_table_id": "tgw-rtb-08d63d78bbe58cf09",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "vpn",
            "dns_support": "enable",
            "id": "tgw-010f3df7db7661f29",
            "multicast_support": "disable",
            "owner_id": "325350732332",
            "propagation_default_route_table_id": "tgw-rtb-08d63d78bbe58cf09",
            "tags": {
              "Name": "vpn-tgw"
            },
            "tags_all": {
              "Name": "vpn-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "192.168.0.0/24",
            "id": "tgw-rtb-08d63d78bbe58cf09_192.168.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-01bc3e3a81ddf4f19",
            "transit_gateway_route_table_id": "tgw-rtb-08d63d78bbe58cf09"
          },
          "dependencies": [
            "aws_customer_gateway.sophos",
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_route_table.vpn",
            "aws_vpn_connection.vpn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:transit-gateway-route-table/tgw-rtb-052394b2026b16e83",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-052394b2026b16e83",
            "transit_gateway_id": "tgw-010f3df7db7661f29"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0c7c1fc9ba6c33c58",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-002745b93a1508d71",
              "subnet-0b810e92b65e1c65e",
              "subnet-0dacb9f29e9d51958"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-010f3df7db7661f29",
            "vpc_id": "vpc-05910391a26cc1a22",
            "vpc_owner_id": "325350732332"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1830706cbd5f1d5",
            "association_id": "eipassoc-08b50f3f2065207e4",
            "domain": "vpc",
            "id": "eipalloc-0b1830706cbd5f1d5",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0cd60be89a01b70b8",
            "private_dns": "ip-10-0-10-20.eu-west-1.compute.internal",
            "private_ip": "10.0.10.20",
            "public_dns": "ec2-63-34-168-50.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.34.168.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04fe22dfadec6f0b6",
            "arn": "arn:aws:ec2:eu-west-1:325350732332:instance/i-046f11a9667573584",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSM-Allow-ec2",
            "id": "i-046f11a9667573584",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a5f63380034cc3c",
            "private_dns": "ip-10-0-20-55.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b1ff840b2b8f918",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a07ebb1fd1f25537"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08489d456743a2f95",
            "tags": {
              "Name": "amzlinux"
            },
            "tags_all": {
              "Name": "amzlinux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a07ebb1fd1f25537"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm-allow",
            "aws_iam_role.ssm",
            "aws_security_group.imcp",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04fe22dfadec6f0b6",
            "arn": "arn:aws:ec2:eu-west-1:325350732332:instance/i-022962ec7d36165a3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSM-Allow-ec2",
            "id": "i-022962ec7d36165a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0946560feb20bbb1e",
            "private_dns": "ip-10-0-20-37.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dc8c1f5e7a404993",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a07ebb1fd1f25537"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08489d456743a2f95",
            "tags": {
              "Name": "test_ping"
            },
            "tags_all": {
              "Name": "test_ping"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a07ebb1fd1f25537"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm-allow",
            "aws_iam_role.ssm",
            "aws_security_group.imcp",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:internet-gateway/igw-0c71416e634a3a9bd",
            "id": "igw-0c71416e634a3a9bd",
            "owner_id": "325350732332",
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1830706cbd5f1d5",
            "association_id": "eipassoc-08b50f3f2065207e4",
            "connectivity_type": "public",
            "id": "nat-0f48c289da8ece5c5",
            "network_interface_id": "eni-0cd60be89a01b70b8",
            "private_ip": "10.0.10.20",
            "public_ip": "63.34.168.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002745b93a1508d71",
            "tags": {
              "Name": "NAT_Gateway_Sophos"
            },
            "tags_all": {
              "Name": "NAT_Gateway_Sophos"
            }
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:route-table/rtb-06188f517664862dc",
            "id": "rtb-06188f517664862dc",
            "owner_id": "325350732332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f48c289da8ece5c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f48c289da8ece5c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "develop-tf-route-table-private"
            },
            "tags_all": {
              "Name": "develop-tf-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:route-table/rtb-0f75c5aac953003f7",
            "id": "rtb-0f75c5aac953003f7",
            "owner_id": "325350732332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c71416e634a3a9bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-010f3df7db7661f29",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "develop-tf-route-table-public"
            },
            "tags_all": {
              "Name": "develop-tf-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fb8cb62133b3921",
            "route_table_id": "rtb-06188f517664862dc",
            "subnet_id": "subnet-08489d456743a2f95"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0659613586789e335",
            "route_table_id": "rtb-06188f517664862dc",
            "subnet_id": "subnet-0748a5286ee88b798"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dab676bb15d3f84",
            "route_table_id": "rtb-06188f517664862dc",
            "subnet_id": "subnet-0db979eb5026375fe"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094693943fd398fb6",
            "route_table_id": "rtb-0f75c5aac953003f7",
            "subnet_id": "subnet-002745b93a1508d71"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d91580122daf3a",
            "route_table_id": "rtb-0f75c5aac953003f7",
            "subnet_id": "subnet-0b810e92b65e1c65e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0891d19eea86410be",
            "route_table_id": "rtb-0f75c5aac953003f7",
            "subnet_id": "subnet-0dacb9f29e9d51958"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:security-group/sg-0a07ebb1fd1f25537",
            "description": "Allow ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a07ebb1fd1f25537",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "icmp-from-all",
            "name_prefix": "",
            "owner_id": "325350732332",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-08489d456743a2f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08489d456743a2f95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-private-0"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-private-0"
            },
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0748a5286ee88b798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0748a5286ee88b798",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-private-1"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-private-1"
            },
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0db979eb5026375fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db979eb5026375fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-private-2"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-private-2"
            },
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-002745b93a1508d71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002745b93a1508d71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-public-0"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-public-0"
            },
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0b810e92b65e1c65e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b810e92b65e1c65e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-public-1"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-public-1"
            },
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0dacb9f29e9d51958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dacb9f29e9d51958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-public-2"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-public-2"
            },
            "vpc_id": "vpc-05910391a26cc1a22"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:vpc/vpc-05910391a26cc1a22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c03fde9490c66ce8",
            "default_route_table_id": "rtb-093df46856cebc3cd",
            "default_security_group_id": "sg-08c56d5ba6339d6af",
            "dhcp_options_id": "dopt-0a507622b4bd3bd76",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05910391a26cc1a22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093df46856cebc3cd",
            "owner_id": "325350732332",
            "tags": {
              "Name": "VPC_Sophos"
            },
            "tags_all": {
              "Name": "VPC_Sophos"
            }
          }
        }
      ]
    }
  ]
}